--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Redirecting...</title>
+    <script>
+        window.location.href = "index.php";
+    </script>
 </head>
 <body>
-    <h1>Hello World!</h1>
 </body>
 </html>
-
