--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=index.php">
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="index.php">click here</a>.</p>
+ <a href="index.php">click here</a>
 </body>
 </html>
